# billion_loops

./: .gitignore  Cargo.toml  Makefile  README.md  appveyor.yml  meson.build  renovate.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config-no-core.toml
.github/workflows/: bench.yml
c/: speedometer.c
cpp/: speedometer.cpp
py/: speedometer.py
py-numba/: numbed.py
rust/: Cargo.toml
rust-no-core/: Cargo.toml  README.md
rust-no-core/src/: main.rs
rust/src/: main.rs
